# labratory_pytorch_pipelines_and_model_training

./: .gitignore  README.md  main.py  pyproject.toml  results.md
src/: datasets.py  experiment_logger.py  logger.py  model.py  train.py  utils.py
